<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_ensembles">

    <fragment
        android:id="@+id/navigation_ensembles"
        android:name="ge.baqar.gogia.malazani.ui.artists.ArtistsListFragment"
        android:label="@string/ensembles"
        tools:layout="@layout/fragment_artists">
        <argument
            android:name="artistType"
            android:defaultValue="1" />
    </fragment>

    <fragment
        android:id="@+id/navigation_oldRecordings"
        android:name="ge.baqar.gogia.malazani.ui.artists.ArtistsListFragment"
        android:label="@string/oldRecordings"
        tools:layout="@layout/fragment_artists">

        <argument
            android:name="artistType"
            android:defaultValue="2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_artists_details"
        android:name="ge.baqar.gogia.malazani.ui.artist.ArtistFragment"
        android:label="@string/artistDetails"
        tools:layout="@layout/fragment_artist" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="ge.baqar.gogia.malazani.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
</navigation>